# robotics_final_project

./: CMakeLists.txt  Final Project time tracking.txt  IK_Simulation.py  Movement_test.py  README.md  camera_calibration.py  checkerboard_mesh_pub.py  checkerboard_pose_publisher.py  checkerboard_viz_marker.py  detect_checkerboard.py  kinematics.py  package.xml
alyssa-dev/: Movement_test.py
devel/: .catkin  setup.sh
devel/lib/chess_master/: Gripper_Alyssa.py  Trac_IK_test.py  checkerboard_mesh_pub.py  checkerboard_pose_pub.py
devel/lib/pkgconfig/: chess_master.pc
devel/share/chess_master/cmake/: chess_masterConfig.cmake
extra/: Final Project time tracking.txt  baxter_rviz.rviz  chessboard.rviz
launch/: checkerboard.launch
src/: Movement_test.py  baxter_position_control_examples.py  baxter_startup.sh  checkerboard_viz_marker.py
src/chess_master/: CMakeLists.txt  package.xml
src/chess_master/config/: board_pose.yaml  camera_calibration.yaml
src/chess_master/launch/: checkerboard.launch
src/chess_master/src/: Gripper_Alyssa.py  IK_Simulation.py  Movement_test.py  State_Machine_dev.py  Trac_IK_test.py  checkerboard_mesh_pub.py  checkerboard_pose_pub.py  kinematics.py
